<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/root_view"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field_layout"
            android:layout_width="250dp"
            android:layout_marginTop="@dimen/generic_screen_vertical_spacing"
            style="@style/AppTheme.EditText.FilledBox"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field_layout"
            android:layout_marginTop="@dimen/generic_screen_vertical_spacing"
            android:layout_width="250dp"
            style="@style/AppTheme.EditText.FilledBox"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>