<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/root_view"
    android:fitsSystemWindows="true">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_app_bar">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            tools:context=".register.RegisterActivity"
            android:layout_marginLeft="@dimen/generic_screen_horizontal_spacing"
            android:layout_marginRight="@dimen/generic_screen_horizontal_spacing"
            android:paddingBottom="72dp"
            android:clipToPadding="true">


            <TextView
                style="@style/AppTheme.Text.Headline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_screen_vertical_spacing"
                android:text="@string/preferences" />

            <TextView
                style="@style/AppTheme.Text.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_screen_vertical_spacing"
                android:text="@string/i_am_with"
                android:textColor="@color/captionTextColor" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/generic_screen_vertical_spacing"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="24dp"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/register_ems_linear_Layout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/register_ems_button"
                            style="@style/LifeLineTextButtonTheme.Register"
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:text="@string/ems" />

                        <ImageView
                            android:id="@+id/register_ems_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="4dp"
                            app:srcCompat="@drawable/ic_directions_bus_black_24dp"
                            tools:ignore="VectorDrawableCompat" />

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:id="@+id/register_hospital_linear_Layout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/register_hospital_button"
                            style="@style/LifeLineTextButtonTheme.Register"
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:text="@string/hospital" />

                        <ImageView
                            android:id="@+id/register_hospital_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="4dp"
                            app:srcCompat="@drawable/ic_local_hospital_black_24dp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/AppTheme.Text.Headline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/credentials" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_screen_vertical_spacing"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_field_layout"
                    style="@style/AppTheme.EditText.FilledBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    style="@style/AppTheme.EditText.FilledBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="text"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_screen_vertical_spacing"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/hospital_name_textInputLayout"
                    style="@style/AppTheme.EditText.FilledBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/hospital_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/hospital_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/register_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

</RelativeLayout>